5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4374/executions/1670_1394.log
== TEST (2019-04-16 19:03:10) 
-- CODE:
int(imput("horas por semana))
-- ERROR:
File "XXXX", line 1
    int(imput("horas por semana))
                                ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:03:34) 
-- CODE:
int(input("horas por semana))
-- ERROR:
File "XXXX", line 1
    int(input("horas por semana))
                                ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
